# alternating-hand-words

./: README.md  pyproject.toml
alternating-hand-words/: pyproject.toml
alternating-hand-words/src/alternating_hand_words/: main.py
alternating-hand-words/tests/: test_hand_predicates.py
docs/: alternating-hand-words-length-4-to-6.txt  design.md
