[tool.poetry]
name = "alternating-hand-words"
version = "0.1.0"
description = ""
authors = ["Jeff McCarrell <jeff@mccarrell.org>"]
readme = "README.md"
packages = [{include = "alternating_hand_words", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
